# kilight-protocol

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/kilight/protocol/: GetData.proto  OutputWriteRequest.proto  OutputWriteResponse.proto  Request.proto  Response.proto  SystemInfoRequest.proto  SystemInfoResponse.proto  SystemStateRequest.proto  SystemStateResponse.proto
